# euromillions-bot

./: .env  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  NIX_GUIDE.md  Procfile  README.md  docker-compose.yml  flake.nix  render.yaml
.github/workflows/: ci.yml
.sqlx/: query-61b85fea4c015bd44a5adecb9bf2a31c3df9b38fe07fb85ec5d3968c9e834a7c.json  query-8b1b5cc33794011759003a18f9188b546db9d28d25fbd73bc02d07e15c13a22f.json  query-b7e3b977de5e522de733f5eb93905f50cf1a53d8efcc15151870dd07348fdbf8.json  query-dbcdb6308a50729c63a15ce88f2d2e837ab4ddae7853cd0db0604979f7c24302.json  query-f2668b4aaee9e28ae7522caf0f9da83c65e8fa2f841c06a767b2686c697e9281.json
migrations/: 20231026000000_init.sql
mobile/: README.md
mobile/android/EuromillionsApp/: settings.gradle.kts
mobile/android/EuromillionsApp/app/: build.gradle.kts  proguard-rules.pro
mobile/android/EuromillionsApp/app/src/main/: AndroidManifest.xml
mobile/ios/EuromillionsApp/EuromillionsApp/: APIClient.swift  EuromillionsAppApp.swift  Models.swift
mobile/ios/EuromillionsApp/EuromillionsApp.xcodeproj/: project.pbxproj
mobile/ios/EuromillionsApp/EuromillionsApp/Views/: GridDetailView.swift  GridsListView.swift  HistoryView.swift
src/: db.rs  fetcher.rs  generator.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: api_tests.rs  fetcher_tests.rs  generator_tests.rs  integration_test.rs  models_test.rs
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json
web/src/: App.svelte  api.ts  types.ts
web/src/components/: GridCard.svelte  GridModal.svelte
(+10 files in other folders)
