[package]
name = "euromillions_bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "euromillions_bot"
path = "src/lib.rs"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["full"] }
scraper = "0.18"
tokio-cron-scheduler = "0.10"

[dev-dependencies]
mockito = "1.2"
actix-rt = "2.9"
wiremock = "0.6"
